# aicomm

./: .pre-commit-config.yaml  README.md  _typos.toml  ai.rest  cliff.toml  test.rest
.github/workflows/: build.yml
chat/: .env  Cargo.toml
chat/ai_sdk/: Cargo.toml
chat/ai_sdk/examples/: ollama.rs  openai.rs
chat/ai_sdk/src/: lib.rs
chat/ai_sdk/src/adapters/: ollama.rs  openai.rs
chat/chat_core/: Cargo.toml
chat/chat_core/src/: lib.rs
chat/chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat/chat_core/src/utils/: jwt.rs
chat/chat_server/: Cargo.toml  chat.yml
chat/chat_server/fixtures/: test.sql
chat/chat_server/src/: agent.rs  config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat/chat_server/src/handlers/: agent.rs  auth.rs  chat.rs  messages.rs  mod.rs
chat/chat_server/src/middlewares/: chat.rs  mod.rs
chat/chat_server/src/models/: agent.rs  chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat/chat_test/: Cargo.toml
chat/chat_test/tests/: chat.rs
chat/migrations/: 20240925055922_inital.sql  20240925055941_trigger.sql  20241008081412_agent.sql  20241008081445_agent_adapter.sql
chat/notify_server/: Cargo.toml  index.html
chat/notify_server/src/: lib.rs  notif.rs  sse.rs
chatapp/: deny.toml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
chatapp/src/: App.vue  main.js  tailwind.css  utils.js
chatapp/src-tauri/: Cargo.toml  tauri.conf.json
chatapp/src-tauri/capabilities/: default.json
chatapp/src-tauri/src/: config.rs  lib.rs  utils.rs
chatapp/src-tauri/src/commands/: mod.rs
chatapp/src/components/: MessageList.vue  MessageSend.vue  Sidebar.vue
chatapp/src/router/: index.js
chatapp/src/store/: index.js
chatapp/src/views/: Chat.vue  Login.vue  Register.vue
