[package]
name = "chatapp"
version = "0.1.0"
description = "Chat App"
authors = ["Tyr Chen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chatapp_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
anyhow = "1.0.89"
arc-swap = "1.7.1"
dirs = "5.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tauri = { version = "2.0.2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-log = { version = "2.0.1", features = ["colored"] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-window-state = "2.0.1"
tracing = { version = "0.1.40", features = ["log"] }
